packages/rust-optimizer/core/src/snapshots/qwik_core__test__example_qwik_conflict.snap
---
source: packages/rust-optimizer/core/src/test.rs
assertion_line: 1238
expression: output
---
==INPUT==


import { $, component$, useStyles } from '@qwik.dev/core';
import { qrl } from '@qwik.dev/core/what';

export const hW = 12;
export const handleWatch = 42;

const componentQrl = () => console.log('not this', qrl());

componentQrl();
export const Foo = component$(() => {
	useStyles$('thing');
	const qwik = hW + handleWatch;
	console.log(qwik);
	const qrl = 23;
	return (
		<div onClick$={()=> console.log(qrl)}/>
	)
}, {
	tagName: "my-foo",
});

export const Root = component$(() => {
	useStyles($('thing'));
	return $(() => {
		return (
			<div/>
		)
	});
}, {
	tagName: "my-foo",
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { qrl as qrl1 } from '@qwik.dev/core/what';
//
const q_Foo_component_HTDRsvUbLiE = /*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_HTDRsvUbLiE"), "Foo_component_HTDRsvUbLiE");
const q_Root_component_royhjYaCbYE = /*#__PURE__*/ qrl(()=>import("./test.tsx_Root_component_royhjYaCbYE"), "Root_component_royhjYaCbYE");
//
export const hW = 12;
export const handleWatch = 42;
const componentQrl1 = ()=>console.log('not this', qrl1());
componentQrl1();
export const Foo = /*#__PURE__*/ componentQrl(q_Foo_component_HTDRsvUbLiE, {
    tagName: "my-foo"
});
export const Root = /*#__PURE__*/ componentQrl(q_Root_component_royhjYaCbYE, {
    tagName: "my-foo"
});


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAEA,SAAS,OAAA,IAAG,QAAQ,sBAAsB;;;;;AAE1C,OAAO,MAAM,KAAK,GAAG;AACrB,OAAO,MAAM,cAAc,GAAG;AAE9B,MAAM,gBAAe,IAAM,QAAQ,GAAG,CAAC,YAAY;AAEnD;AACA,OAAO,MAAM,oBAAM,0CAQhB;IACF,SAAS;AACV,GAAG;AAEH,OAAO,MAAM,qBAAO,2CAOjB;IACF,SAAS;AACV,GAAG\"}")
============================= test.tsx_Foo_component_HTDRsvUbLiE.js (ENTRY POINT)==

import { hW } from "./test";
import { handleWatch } from "./test";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Foo_component_div_q_e_click_YEa2A5ADUOg = /*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_div_q_e_click_YEa2A5ADUOg"), "Foo_component_div_q_e_click_YEa2A5ADUOg");
//
export const Foo_component_HTDRsvUbLiE = ()=>{
    useStyles$('thing');
    const qwik = hW + handleWatch;
    console.log(qwik);
    return /*#__PURE__*/ _jsxSorted("div", null, {
        "q-e:click": q_Foo_component_div_q_e_click_YEa2A5ADUOg
    }, null, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;yCAU8B;IAC7B,WAAW;IACX,MAAM,OAAO,KAAK;IAClB,QAAQ,GAAG,CAAC;IAEZ,qBACC,WAAC;QAAI,WAAQ;;AAEf\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    265,
    420
  ]
}
*/
============================= test.tsx_Root_component_useStyles_u5DkUxGrGnU.js (ENTRY POINT)==

export const Root_component_useStyles_u5DkUxGrGnU = 'thing';


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"oDAuBa\"}")
/*
{
  "origin": "test.tsx",
  "name": "Root_component_useStyles_u5DkUxGrGnU",
  "entry": null,
  "displayName": "test.tsx_Root_component_useStyles",
  "hash": "u5DkUxGrGnU",
  "canonicalFilename": "test.tsx_Root_component_useStyles_u5DkUxGrGnU",
  "path": "",
  "extension": "js",
  "parent": "Root_component_royhjYaCbYE",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    501,
    508
  ]
}
*/
============================= test.tsx_Root_component_royhjYaCbYE.js (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
import { useStyles } from "@qwik.dev/core";
//
const q_Root_component_1_cBpQNYDUHI4 = /*#__PURE__*/ qrl(()=>import("./test.tsx_Root_component_1_cBpQNYDUHI4"), "Root_component_1_cBpQNYDUHI4");
const q_Root_component_useStyles_u5DkUxGrGnU = /*#__PURE__*/ qrl(()=>import("./test.tsx_Root_component_useStyles_u5DkUxGrGnU"), "Root_component_useStyles_u5DkUxGrGnU");
//
export const Root_component_royhjYaCbYE = ()=>{
    useStyles(q_Root_component_useStyles_u5DkUxGrGnU);
    return q_Root_component_1_cBpQNYDUHI4;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;0CAsB+B;IAC9B;IACA;AAKD\"}")
/*
{
  "origin": "test.tsx",
  "name": "Root_component_royhjYaCbYE",
  "entry": null,
  "displayName": "test.tsx_Root_component",
  "hash": "royhjYaCbYE",
  "canonicalFilename": "test.tsx_Root_component_royhjYaCbYE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    480,
    561
  ]
}
*/
============================= test.tsx_Root_component_1_cBpQNYDUHI4.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
//
export const Root_component_1_cBpQNYDUHI4 = ()=>{
    return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;4CAwBU;IACR,qBACC,WAAC;AAEH\"}")
/*
{
  "origin": "test.tsx",
  "name": "Root_component_1_cBpQNYDUHI4",
  "entry": null,
  "displayName": "test.tsx_Root_component_1",
  "hash": "cBpQNYDUHI4",
  "canonicalFilename": "test.tsx_Root_component_1_cBpQNYDUHI4",
  "path": "",
  "extension": "js",
  "parent": "Root_component_royhjYaCbYE",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    522,
    557
  ]
}
*/
============================= test.tsx_Foo_component_div_q_e_click_YEa2A5ADUOg.js (ENTRY POINT)==

export const Foo_component_div_q_e_click_YEa2A5ADUOg = ()=>console.log(23);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"uDAgBiB,IAAK,QAAQ,GAAG,CAFpB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_q_e_click_YEa2A5ADUOg",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_q_e_click",
  "hash": "YEa2A5ADUOg",
  "canonicalFilename": "test.tsx_Foo_component_div_q_e_click_YEa2A5ADUOg",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_HTDRsvUbLiE",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    391,
    412
  ]
}
*/
== DIAGNOSTICS ==

[]
